--- a/locale/nl.po
+++ b/locale/nl.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: NoteTree 2.2\n"
-"POT-Creation-Date: 2019-02-02 15:58+CET\n"
-"PO-Revision-Date: 2019-02-02 16:15+0100\n"
+"POT-Creation-Date: 2019-12-27 16:09+CET\n"
+"PO-Revision-Date: 2019-12-27 17:01+0100\n"
 "Last-Translator: \n"
 "Language-Team: NL <LL@li.org>\n"
 "Language: nl\n"
@@ -16,107 +16,294 @@ msgstr ""
 "Generated-By: pygettext.py 1.5\n"
 "X-Generator: Poedit 2.0.6\n"
 
-#: notetree/notetree_qt.py:25 notetree/notetree_wx.py:23
-msgid "t_tagman"
-msgstr "Manage tags"
+#: notetree/main.py:22
+msgid "t_nl"
+msgstr "Nederlands"
 
-#: notetree/notetree_qt.py:32 notetree/notetree_wx.py:29
-msgid "b_remtag"
-msgstr "Verwijder"
+#: notetree/main.py:23
+msgid "t_en"
+msgstr "Engels"
 
-#: notetree/notetree_qt.py:34 notetree/notetree_wx.py:31
-msgid "b_addtag"
-msgstr "Voeg toe/wijzig"
+#: notetree/main.py:54
+msgid "no_nt_file"
+msgstr "{} is geen NoteTree bestand"
 
-#: notetree/notetree_qt.py:36 notetree/notetree_wx.py:33
-#: notetree/notetree_wx.py:275
-msgid "b_done"
-msgstr "Klaar"
+#: notetree/main.py:91
+msgid "m_main"
+msgstr "&Main"
 
-#: notetree/notetree_qt.py:40 notetree/notetree_wx.py:37
-msgid "l_oldval"
-msgstr "Huidige:"
+#: notetree/main.py:92
+msgid "h_reload"
+msgstr "Notities bestand opnieuw lezen"
 
-#: notetree/notetree_qt.py:43 notetree/notetree_wx.py:40
-msgid "l_newval"
-msgstr "Nieuwe waarde:"
+#: notetree/main.py:92
+msgid "m_reload"
+msgstr "&Laden"
 
-#: notetree/notetree_qt.py:49 notetree/notetree_wx.py:46
-msgid "t_applied"
-msgstr "Wijzigingen worden onmiddellijk doorgevoerd"
+#: notetree/main.py:93
+msgid "h_save"
+msgstr "Notities bestand opslaan"
 
-#: notetree/notetree_qt.py:86 notetree/notetree_wx.py:86
-msgid "t_remtag"
-msgstr "Keyword \"{}\" wordt verwijderd - doorgaan?"
+#: notetree/main.py:93
+msgid "m_save"
+msgstr "Op&slaan "
 
-#: notetree/notetree_qt.py:101 notetree/notetree_wx.py:100
-msgid "t_repltag"
-msgstr "Keyword \"{}\" wordt vervangen door \"{}\" "
+#: notetree/main.py:95
+msgid "h_root"
+msgstr "Hoofditem hernoemen"
 
-#: notetree/notetree_qt.py:102 notetree/notetree_wx.py:102
-msgid "t_repltag2"
-msgstr "Ook vervangen waar deze gebruikt wordt (nee betekent verwijderen)?"
+#: notetree/main.py:95
+msgid "m_root"
+msgstr "&Titel hoofditem"
 
-#: notetree/notetree_qt.py:117 notetree/notetree_wx.py:115
-msgid "t_addtag"
-msgstr "Keyword \"{}\" wordt toegevoegd - doorgaan?"
+#: notetree/main.py:96
+msgid "h_tagman"
+msgstr "Tags toevoegen, hernoemen en/of verwijderen"
 
-#: notetree/notetree_qt.py:131 notetree/notetree_qt4.py:36
-#: notetree/notetree_wx.py:129
-msgid "w_tags"
-msgstr "trefwoorden toekennen"
+#: notetree/main.py:96
+msgid "m_tagman"
+msgstr "Sleutelwoorden onderhouden"
 
-#: notetree/notetree_qt.py:138 notetree/notetree_qt4.py:42
-#: notetree/notetree_wx.py:134
-msgid "t_tags"
-msgstr "trefwoord(en):"
+#: notetree/main.py:98
+msgid "h_hide"
+msgstr "Verbergen in system tray"
 
-#: notetree/notetree_qt.py:139 notetree/notetree_qt.py:193
-#: notetree/notetree_qt4.py:43 notetree/notetree_wx.py:135
-#: notetree/notetree_wx.py:192
-msgid "b_tag"
-msgstr "&Selecteer"
+#: notetree/main.py:98
+msgid "m_hide"
+msgstr "&Verberg "
 
-#: notetree/notetree_qt.py:141 notetree/notetree_qt.py:195
-#: notetree/notetree_qt4.py:45 notetree/notetree_wx.py:137
-#: notetree/notetree_wx.py:194
-msgid "b_untag"
-msgstr "&Deselecteer"
+#: notetree/main.py:99
+msgid "h_lang"
+msgstr "Wijzig de taal van het programma"
 
-#: notetree/notetree_qt.py:143 notetree/notetree_qt.py:196
-#: notetree/notetree_qt4.py:47 notetree/notetree_wx.py:139
-#: notetree/notetree_wx.py:195
-msgid "b_newtag"
-msgstr "&Nieuw"
+#: notetree/main.py:99
+msgid "m_lang"
+msgstr "T&aal"
 
-#: notetree/notetree_qt.py:145 notetree/notetree_shared.py:96
-#: notetree/notetree_wx.py:141
+#: notetree/main.py:100
+msgid "h_opts"
+msgstr "Instellingen voor het tonen van meldingen"
+
+#: notetree/main.py:100
+msgid "m_opts"
+msgstr "Meldingen"
+
+#: notetree/main.py:102
+msgid "h_exit"
+msgstr "Programma afsluiten"
+
+#: notetree/main.py:102
+msgid "m_exit"
+msgstr "e&Xit"
+
+#: notetree/main.py:103
+msgid "m_note"
+msgstr "&Notitie"
+
+#: notetree/main.py:104
+msgid "h_new"
+msgstr "Notitie toevoegen"
+
+#: notetree/main.py:104
+msgid "m_new"
+msgstr "&Nieuw "
+
+#: notetree/main.py:105
+msgid "h_delete"
+msgstr "Notitie verwijderen"
+
+#: notetree/main.py:105
+msgid "m_delete"
+msgstr "Verwij&der"
+
+#: notetree/main.py:106
+msgid "h_name"
+msgstr "Huidige notitie hernoemen"
+
+#: notetree/main.py:106
+msgid "m_name"
+msgstr "Notitie &titel"
+
+#: notetree/main.py:108
+msgid "h_tags"
+msgstr "Ken trefwoord(en) toe aan deze notitie"
+
+#: notetree/main.py:108
+msgid "m_tags"
+msgstr "&Trefwoorden"
+
+#: notetree/main.py:110
+msgid "h_forward"
+msgstr "Bekijk volgende notitie"
+
+#: notetree/main.py:110 notetree/wx_gui.py:570
+msgid "m_forward"
+msgstr "&Verder"
+
+#: notetree/main.py:111
+msgid "h_back"
+msgstr "Bekijk vorige notitie"
+
+#: notetree/main.py:111 notetree/wx_gui.py:570
+msgid "m_back"
+msgstr "&Terug"
+
+#: notetree/main.py:112 notetree/qt_gui.py:488 notetree/wx_gui.py:559
+msgid "m_view"
+msgstr "&Weergave"
+
+#: notetree/main.py:113
+msgid "h_revorder"
+msgstr "Toon in omgekeerde volgorde van toevoegen"
+
+#: notetree/main.py:113 notetree/qt_gui.py:489 notetree/qt_gui.py:500
+#: notetree/qt_gui.py:830 notetree/qt_gui.py:861 notetree/qt_gui.py:896
+#: notetree/wx_gui.py:560 notetree/wx_gui.py:595 notetree/wx_gui.py:1003
+msgid "m_revorder"
+msgstr "&Nieuwste eerst"
+
+#: notetree/main.py:115 notetree/qt_gui.py:824 notetree/wx_gui.py:945
+msgid "h_selall"
+msgstr "Laat alle notities zien"
+
+#: notetree/main.py:115 notetree/qt_gui.py:828
+msgid "m_selall"
+msgstr "&Selecteer Alles"
+
+#: notetree/main.py:116
+msgid "h_seltag"
+msgstr "Laat notities zien met een bepaald trefwoord"
+
+#: notetree/main.py:116 notetree/qt_gui.py:859 notetree/qt_gui.py:865
+#: notetree/qt_gui.py:867
+msgid "m_seltag"
+msgstr "Selecteer op &Trefwoord"
+
+#: notetree/main.py:117
+msgid "h_seltxt"
+msgstr "Laat notities zien die een bepaalde tekst bevatten"
+
+#: notetree/main.py:117 notetree/qt_gui.py:894 notetree/qt_gui.py:900
+#: notetree/qt_gui.py:902
+msgid "m_seltxt"
+msgstr "Selecteer op T&ekst"
+
+#: notetree/main.py:118
+msgid "m_help"
+msgstr "&Help"
+
+#: notetree/main.py:119
+msgid "h_about"
+msgstr "Meer over deze applicatie"
+
+#: notetree/main.py:119
+msgid "m_about"
+msgstr "&Over"
+
+#: notetree/main.py:120
+msgid "h_keys"
+msgstr "Handige toetscombinaties"
+
+#: notetree/main.py:120 notetree/qt_gui.py:140 notetree/wx_gui.py:142
 msgid "m_keys"
 msgstr "&Sneltoetsen"
 
-#: notetree/notetree_qt.py:164 notetree/notetree_qt4.py:65
-#: notetree/notetree_wx.py:158
+#: notetree/main.py:138
+msgid "ask_create"
+msgstr "Bestand {} niet gevonden, aanmaken?"
+
+#: notetree/main.py:142
+msgid "404_message"
+msgstr "Bestand niet gevonden"
+
+#: notetree/qt_gui.py:20 notetree/wx_gui.py:19
+msgid "t_tagman"
+msgstr "Tags koppelen"
+
+#: notetree/qt_gui.py:27 notetree/wx_gui.py:25
+msgid "b_remtag"
+msgstr "Verwijder"
+
+#: notetree/qt_gui.py:29 notetree/wx_gui.py:27
+msgid "b_addtag"
+msgstr "Voeg toe/wijzig"
+
+#: notetree/qt_gui.py:31 notetree/wx_gui.py:29 notetree/wx_gui.py:278
+msgid "b_done"
+msgstr "Klaar"
+
+#: notetree/qt_gui.py:35 notetree/wx_gui.py:33
+msgid "l_oldval"
+msgstr "Huidige:"
+
+#: notetree/qt_gui.py:38 notetree/wx_gui.py:36
+msgid "l_newval"
+msgstr "Nieuwe waarde:"
+
+#: notetree/qt_gui.py:44 notetree/wx_gui.py:42
+msgid "t_applied"
+msgstr "Wijzigingen worden onmiddellijk doorgevoerd"
+
+#: notetree/qt_gui.py:81 notetree/wx_gui.py:85
+msgid "t_remtag"
+msgstr "Keyword \"{}\" wordt verwijderd - doorgaan?"
+
+#: notetree/qt_gui.py:96 notetree/wx_gui.py:100
+msgid "t_repltag"
+msgstr "Keyword \"{}\" wordt vervangen door \"{}\" "
+
+#: notetree/qt_gui.py:97 notetree/wx_gui.py:102
+msgid "t_repltag2"
+msgstr "Ook vervangen waar deze gebruikt wordt (nee betekent verwijderen)?"
+
+#: notetree/qt_gui.py:112 notetree/wx_gui.py:116
+msgid "t_addtag"
+msgstr "Keyword \"{}\" wordt toegevoegd - doorgaan?"
+
+#: notetree/qt_gui.py:126 notetree/wx_gui.py:130
+msgid "w_tags"
+msgstr "trefwoorden toekennen"
+
+#: notetree/qt_gui.py:133 notetree/wx_gui.py:135
+msgid "t_tags"
+msgstr "trefwoord(en):"
+
+#: notetree/qt_gui.py:134 notetree/qt_gui.py:188 notetree/wx_gui.py:136
+#: notetree/wx_gui.py:193
+msgid "b_tag"
+msgstr "&Selecteer"
+
+#: notetree/qt_gui.py:136 notetree/qt_gui.py:190 notetree/wx_gui.py:138
+#: notetree/wx_gui.py:195
+msgid "b_untag"
+msgstr "&Deselecteer"
+
+#: notetree/qt_gui.py:138 notetree/qt_gui.py:191 notetree/wx_gui.py:140
+#: notetree/wx_gui.py:196
+msgid "b_newtag"
+msgstr "&Nieuw"
+
+#: notetree/qt_gui.py:159 notetree/wx_gui.py:159
 msgid "t_left"
 msgstr "Beschikbaar:"
 
-#: notetree/notetree_qt.py:178 notetree/notetree_qt4.py:78
-#: notetree/notetree_wx.py:172
+#: notetree/qt_gui.py:173 notetree/wx_gui.py:173
 msgid "t_right"
 msgstr "Toegekend:"
 
-#: notetree/notetree_qt.py:192 notetree/notetree_wx.py:191
+#: notetree/qt_gui.py:187 notetree/wx_gui.py:192
 msgid "a_from"
 msgstr "Activeer linkerlijst"
 
-#: notetree/notetree_qt.py:194 notetree/notetree_wx.py:193
+#: notetree/qt_gui.py:189 notetree/wx_gui.py:194
 msgid "a_to"
 msgstr "Activeer rechterlijst"
 
-#: notetree/notetree_qt.py:246 notetree/notetree_wx.py:254
+#: notetree/qt_gui.py:240 notetree/wx_gui.py:257
 msgid "t_newtag"
 msgstr "Geef nieuw trefwoord op"
 
-#: notetree/notetree_qt.py:255 notetree/notetree_wx.py:265
+#: notetree/qt_gui.py:249 notetree/wx_gui.py:268
 msgid "tag_help"
 msgstr ""
 "Ga naar linker lijst - Ctrl+L\n"
@@ -125,87 +312,88 @@ msgstr ""
 "Tag weghalen - Ctrl+naar links\n"
 "Nieuwe tag toevoegen - Ctrl+N"
 
-#: notetree/notetree_qt.py:262 notetree/notetree_qt.py:717
-#: notetree/notetree_qt4.py:453 notetree/notetree_wx.py:272
-#: notetree/notetree_wx.py:841
+#: notetree/qt_gui.py:256 notetree/qt_gui.py:771 notetree/wx_gui.py:275
+#: notetree/wx_gui.py:889
 msgid "t_keys"
 msgstr "sneltoetsen"
 
-#: notetree/notetree_qt.py:357 notetree/notetree_qt4.py:131
-#: notetree/notetree_wx.py:368
+#: notetree/qt_gui.py:351 notetree/wx_gui.py:365
 msgid "sleep_message"
 msgstr ""
 "NoteTree gaat nu slapen in de System tray\n"
 "Er komt een icoontje waarop je kunt klikken om hem weer wakker te maken"
 
-#: notetree/notetree_qt.py:358 notetree/notetree_qt4.py:132
-#: notetree/notetree_wx.py:370
+#: notetree/qt_gui.py:352 notetree/wx_gui.py:367
 msgid "hide_message"
 msgstr "Deze melding niet meer laten zien"
 
-#: notetree/notetree_qt.py:401 notetree/notetree_qt.py:604
-#: notetree/notetree_qt4.py:173 notetree/notetree_qt4.py:360
-#: notetree/notetree_wx.py:398
+#: notetree/qt_gui.py:387 notetree/wx_gui.py:411
+msgid "t_hide"
+msgstr "Melden dat de applicatie verborgen gaat worden in de system tray"
+
+#: notetree/qt_gui.py:388 notetree/wx_gui.py:412
+msgid "t_load"
+msgstr "Melden dat het notities bestand opnieuw gelezen is"
+
+#: notetree/qt_gui.py:389 notetree/wx_gui.py:413
+msgid "t_save"
+msgstr "Melden dat het notities bestand opgeslagen is"
+
+#: notetree/qt_gui.py:391 notetree/wx_gui.py:414
+msgid "t_sett"
+msgstr "NoteTree Settings"
+
+#: notetree/qt_gui.py:411 notetree/wx_gui.py:429
+msgid "b_apply"
+msgstr "&Toepassen"
+
+#: notetree/qt_gui.py:414 notetree/wx_gui.py:432
+msgid "b_close"
+msgstr "&Sluiten"
+
+#: notetree/qt_gui.py:453 notetree/qt_gui.py:658 notetree/wx_gui.py:395
 msgid "revive_message"
 msgstr "Klik hier om NoteTree te activeren"
 
-#: notetree/notetree_qt.py:435 notetree/notetree_shared.py:88
-#: notetree/notetree_wx.py:507
-msgid "m_view"
-msgstr "&Weergave"
+#: notetree/qt_gui.py:541 notetree/wx_gui.py:660
+msgid "m_ignore"
+msgstr "Incompatibele scheidingspositie wordt genegeerd"
 
-#: notetree/notetree_qt.py:436 notetree/notetree_qt.py:447
-#: notetree/notetree_qt.py:776 notetree/notetree_qt.py:807
-#: notetree/notetree_qt.py:842 notetree/notetree_shared.py:89
-#: notetree/notetree_wx.py:508 notetree/notetree_wx.py:550
-#: notetree/notetree_wx.py:966
-msgid "m_revorder"
-msgstr "&Nieuwste eerst"
-
-#: notetree/notetree_qt.py:557 notetree/notetree_qt4.py:321
-#: notetree/notetree_wx.py:674
+#: notetree/qt_gui.py:611 notetree/wx_gui.py:724
 msgid "ask_reload"
 msgstr "OK om ini file opnieuw te laden (wijzigingen gaan verloren)?"
 
-#: notetree/notetree_qt.py:585 notetree/notetree_qt4.py:346
-#: notetree/notetree_wx.py:707
+#: notetree/qt_gui.py:639 notetree/wx_gui.py:755
 msgid "t_root"
 msgstr "Geef nieuwe titel voor het hoofditem:"
 
-#: notetree/notetree_qt.py:615 notetree/notetree_qt4.py:370
-#: notetree/notetree_wx.py:743
+#: notetree/qt_gui.py:669 notetree/wx_gui.py:794
 msgid "t_new"
 msgstr "Geef een titel op voor het nieuwe item:"
 
-#: notetree/notetree_qt.py:643 notetree/notetree_qt4.py:393
-#: notetree/notetree_wx.py:771
+#: notetree/qt_gui.py:697 notetree/wx_gui.py:825
 msgid "no_delete_root"
 msgstr "Hoofditem kan niet verwijderd worden"
 
-#: notetree/notetree_qt.py:648 notetree/notetree_qt4.py:396
-#: notetree/notetree_wx.py:776
+#: notetree/qt_gui.py:702 notetree/wx_gui.py:830
 msgid "t_name"
 msgstr "Geef nieuwe titel voor het huidige item:"
 
-#: notetree/notetree_qt.py:660 notetree/notetree_qt4.py:406
-#: notetree/notetree_wx.py:789
+#: notetree/qt_gui.py:714 notetree/wx_gui.py:843
 msgid "no_next_item"
 msgstr "Er is geen volgende"
 
-#: notetree/notetree_qt.py:669 notetree/notetree_qt4.py:413
-#: notetree/notetree_wx.py:798
+#: notetree/qt_gui.py:723 notetree/wx_gui.py:852
 msgid "no_prev_item"
 msgstr "Er is geen vorige"
 
-#: notetree/notetree_qt.py:703 notetree/notetree_qt4.py:440
-#: notetree/notetree_wx.py:836
+#: notetree/qt_gui.py:757 notetree/wx_gui.py:884
 msgid "info_text"
 msgstr ""
 "NoteTree door Albert Visser\n"
 "Electronisch notitieblokje"
 
-#: notetree/notetree_qt.py:710 notetree/notetree_qt4.py:446
-#: notetree/notetree_wx.py:416
+#: notetree/qt_gui.py:764 notetree/wx_gui.py:456
 msgid "help_text"
 msgstr ""
 "Ctrl-N                   - nieuwe notitie\n"
@@ -223,192 +411,25 @@ msgstr ""
 "Shift-F6 - trefwoorden beheren\n"
 "F9 - volgorde omdraaien"
 
-#: notetree/notetree_qt.py:728 notetree/notetree_qt4.py:464
-#: notetree/notetree_wx.py:848
+#: notetree/qt_gui.py:782 notetree/wx_gui.py:896
 msgid "t_lang"
 msgstr "Kies een taal"
 
-#: notetree/notetree_qt.py:770 notetree/notetree_qt4.py:489
-#: notetree/notetree_shared.py:91 notetree/notetree_wx.py:901
-msgid "h_selall"
-msgstr "Laat alle notities zien"
-
-#: notetree/notetree_qt.py:774 notetree/notetree_qt4.py:211
-#: notetree/notetree_shared.py:91
-msgid "m_selall"
-msgstr "&Selecteer Alles"
-
-#: notetree/notetree_qt.py:792 notetree/notetree_qt4.py:506
-#: notetree/notetree_wx.py:910
+#: notetree/qt_gui.py:846 notetree/wx_gui.py:954
 msgid "i_seltag"
 msgstr "Kies een trefwoord om te zoeken"
 
-#: notetree/notetree_qt.py:801 notetree/notetree_qt4.py:509
-#: notetree/notetree_wx.py:919
+#: notetree/qt_gui.py:855 notetree/wx_gui.py:963
 msgid "s_seltag"
 msgstr "Toon {} notities met trefwoord `{}`"
 
-#: notetree/notetree_qt.py:805 notetree/notetree_qt.py:811
-#: notetree/notetree_qt.py:813 notetree/notetree_qt4.py:211
-#: notetree/notetree_shared.py:92
-msgid "m_seltag"
-msgstr "Selecteer op &Trefwoord"
-
-#: notetree/notetree_qt.py:827 notetree/notetree_qt4.py:521
-#: notetree/notetree_wx.py:934
+#: notetree/qt_gui.py:881 notetree/wx_gui.py:978
 msgid "i_seltxt"
 msgstr "Geef tekst op om te zoeken"
 
-#: notetree/notetree_qt.py:836 notetree/notetree_qt4.py:524
-#: notetree/notetree_wx.py:945
+#: notetree/qt_gui.py:890 notetree/wx_gui.py:989
 msgid "s_seltxt"
 msgstr "Toon {} notities met tekst `{}`"
-
-#: notetree/notetree_qt.py:840 notetree/notetree_qt.py:846
-#: notetree/notetree_qt.py:848 notetree/notetree_qt4.py:211
-#: notetree/notetree_shared.py:93
-msgid "m_seltxt"
-msgstr "Selecteer op T&ekst"
-
-#: notetree/notetree_shared.py:19
-msgid "t_nl"
-msgstr "Nederlands"
-
-#: notetree/notetree_shared.py:20
-msgid "t_en"
-msgstr "Engels"
-
-#: notetree/notetree_shared.py:67
-msgid "m_main"
-msgstr "&Main"
-
-#: notetree/notetree_shared.py:68
-msgid "h_reload"
-msgstr "Notities bestand opnieuw lezen"
-
-#: notetree/notetree_shared.py:68
-msgid "m_reload"
-msgstr "&Laden"
-
-#: notetree/notetree_shared.py:69
-msgid "h_save"
-msgstr "Notities bestand opslaan"
-
-#: notetree/notetree_shared.py:69
-msgid "m_save"
-msgstr "Op&slaan "
-
-#: notetree/notetree_shared.py:71
-msgid "h_root"
-msgstr "Hoofditem hernoemen"
-
-#: notetree/notetree_shared.py:71
-msgid "m_root"
-msgstr "&Titel hoofditem"
-
-#: notetree/notetree_shared.py:75
-msgid "h_hide"
-msgstr "Verbergen in system tray"
-
-#: notetree/notetree_shared.py:75
-msgid "m_hide"
-msgstr "&Verberg "
-
-#: notetree/notetree_shared.py:76
-msgid "h_lang"
-msgstr "Wijzig de taal van het programma"
-
-#: notetree/notetree_shared.py:76
-msgid "m_lang"
-msgstr "T&aal"
-
-#: notetree/notetree_shared.py:78
-msgid "h_exit"
-msgstr "Programma afsluiten"
-
-#: notetree/notetree_shared.py:78
-msgid "m_exit"
-msgstr "e&Xit"
-
-#: notetree/notetree_shared.py:79
-msgid "m_note"
-msgstr "&Notitie"
-
-#: notetree/notetree_shared.py:80
-msgid "h_new"
-msgstr "Notitie toevoegen"
-
-#: notetree/notetree_shared.py:80
-msgid "m_new"
-msgstr "&Nieuw "
-
-#: notetree/notetree_shared.py:81
-msgid "h_delete"
-msgstr "Notitie verwijderen"
-
-#: notetree/notetree_shared.py:81
-msgid "m_delete"
-msgstr "Verwij&der"
-
-#: notetree/notetree_shared.py:82
-msgid "h_name"
-msgstr "Huidige notitie hernoemen"
-
-#: notetree/notetree_shared.py:82
-msgid "m_name"
-msgstr "Notitie &titel"
-
-#: notetree/notetree_shared.py:84
-msgid "h_tags"
-msgstr "Ken trefwoord(en) toe aan deze notitie"
-
-#: notetree/notetree_shared.py:84
-msgid "m_tags"
-msgstr "&Trefwoorden"
-
-#: notetree/notetree_shared.py:86
-msgid "h_forward"
-msgstr "Bekijk volgende notitie"
-
-#: notetree/notetree_shared.py:86
-msgid "m_forward"
-msgstr "&Verder"
-
-#: notetree/notetree_shared.py:87
-msgid "h_back"
-msgstr "Bekijk vorige notitie"
-
-#: notetree/notetree_shared.py:87
-msgid "m_back"
-msgstr "&Terug"
-
-#: notetree/notetree_shared.py:89
-msgid "h_revorder"
-msgstr "Toon in omgekeerde volgorde van toevoegen"
-
-#: notetree/notetree_shared.py:92
-msgid "h_seltag"
-msgstr "Laat notities zien met een bepaald trefwoord"
-
-#: notetree/notetree_shared.py:93
-msgid "h_seltxt"
-msgstr "Laat notities zien die een bepaalde tekst bevatten"
-
-#: notetree/notetree_shared.py:94
-msgid "m_help"
-msgstr "&Help"
-
-#: notetree/notetree_shared.py:95
-msgid "h_about"
-msgstr "Meer over deze applicatie"
-
-#: notetree/notetree_shared.py:95
-msgid "m_about"
-msgstr "&Over"
-
-#: notetree/notetree_shared.py:96
-msgid "h_keys"
-msgstr "Handige toetscombinaties"
 
 #~ msgid "m_select"
 #~ msgstr "&Selecteren"
